--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -1,17 +1,23 @@
-.notfound{
+/* .notfound{
     background-image: url(https://cdn.dribbble.com/users/2446071/screenshots/6903453/404.gif);
     height: 100%;
     width:  100%;
-}
-
+} */
+/* 
 .hello{
     height: 100vh;
-    /* width: 100%; */
-}
+ width: 100%;
+} */
 #nfb{
-    position: relative;
-    bottom: 0px;
-    padding-top: 100%;
-    
+    position: sticky;
+    top: 75%;
+    margin-left: 45%;
 
+}
+@media(min-width:768){
+    #nfb{
+        position: absolute;
+        top: 75%;
+        margin-left: 35%;
+    }
 }
