--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -5,6 +5,7 @@
     color: #01579b;
     padding: 0px;
     margin: 0px;
+    width: 100%;
 }
 
 
@@ -13,13 +14,14 @@
     float:right;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768) {
 .meta-nav {
     min-height: 100px;
     background: white;
     color: #01579b;
     padding: 0px;
     margin: 0px;
+    width: 100%;
 }
 .meta-ieee-logo {
       padding: 20px 0px 0px 0px;
