--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
   user-select: none;          /* Likely future */
+  overflow-x: hidden; 
 }
 no-copy {
   -webkit-user-select: none;  /* Chrome all / Safari all */
