--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -6,3 +6,9 @@
   text-decoration: underline;
   color:  #777777;
 }
+.backdrp{
+  background-image: url('../../assets/hero.gif');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
