--- a/src/css/aboutMEC.css
+++ b/src/css/aboutMEC.css
@@ -1,35 +1,75 @@
-.about-mec{
-    background-color: Black;
-    background-image:url("../AerialMEC.jpg");
+.mec {
+    background-image: url("../assets/mec.jpeg");
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.card-panel{
-    background-color:Black;
-    opacity:0.7;
-    color: white;
-    margin: 60px;
-    padding: 30px;
-    width: 80%;
-    height:600px;
-}
-.card-panel h2{
+    height: 800px;
+    width: 100%;
+    backdrop-filter: blur(2px);
+  }
+  .stuff {
+    padding: 200px;
+    height: 610px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin: auto;
+    /* background-color: black; */
+    color: rgb(29, 93, 182);
+    /* opacity: 0.8; */
+    border-radius: 20px;
+    backdrop-filter: blur(100px);
+    
+  }
+  
+  .stuff h2 {
     text-align: center;
     font-weight: bolder;
-    font-size:4rem;
-}
-.card-panel p{
-    line-height:2rem;
+    font-size: 3.5rem;
+  }
+  .stuff p {
+    line-height: 2rem;
     padding: 20px;
-    font-size:1.4rem;
+    font-size: 1.2rem;
     font-weight: bolder;
-}
-.card-crater{
-    height:800px;
-    padding:50px;
-    width:80%;
-}
-/* .row .col.l6{
-    margin-left:0px;
-} */
+  }
+  .valign-wrapper {
+    flex-wrap: wrap;
+  }
+  .mainn .row .col {
+    padding: 5px 10px;
+    width: 5px;
+  }
+  .mainn .row .col.l4{
+      width:500px;
+  }
+  @media only screen and (min-width: 1050px) {
+    .mainn .row .col:first-child {
+      margin-right: 20px;
+    }
+    .mainn .row .col:last-child {
+      margin-left: 20px;
+    }
+  }
+  @media only screen and (max-width: 1050px) {
+    .stuff {
+      height: 320px;
+    }
+    .stuff h2 {
+      font-size: 2.7rem;
+      line-height: 0.2rem;
+      font-weight: bold;
+      padding: 10px;
+    }
+    .stuff p {
+      font-size: 0.9rem;
+      line-height: 1.1rem;
+      font-weight: bold;
+      padding: 10px;
+    }
+    .mainn .row .col {
+      padding: 20px 10px;
+    }
+    .mainn .row .col.s10{
+      width:450px;
+  }
+  }
