--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,8 @@
 
-
+  .join{
+    border-radius: 20px;
+    border: 3px dashed #ccc;
+  }
   .main_img{
     width:100%;
     height:100%;
@@ -9,13 +12,11 @@
     background-size: cover;
     background-position: bottom;
   }
-
-  .iedc_img{
-    margin-top:5em;
-    background-repeat:no-repeat;
-    height:100%;
-    width:100%;
+  .round{
+    border-bottom-right-radius: 20px !important; 
+    border-bottom-left-radius: 20px !important;
   }
+
 
   #about_img {
     width: 100%;
@@ -36,7 +37,6 @@
   }
 
   #top_margin {
-    margin-top: 2em;
     bottom: 0;
   }
 
