--- a/src/css/aboutMEC.css
+++ b/src/css/aboutMEC.css
@@ -3,35 +3,55 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    height: fit-content;
+    padding: 30px;
     width: 100%;
     backdrop-filter: blur(2px);
   }
-  .stuff {
+  .mec .card{
     padding: 200px;
-    height: 610px;
+    height: 630px;
     margin-left: 20px;
     margin-right: 20px;
     margin: auto;
-    /* background-color: black; */
+    /* background-color: white; */
+    background-color: rgba(255, 255, 255, 0.48);
     color: rgb(29, 93, 182);
     /* opacity: 0.8; */
     border-radius: 20px;
     backdrop-filter: blur(100px);
+
+
+    backdrop-filter: blur(100px);
+    -webkit-backdrop-filter: blur(100px) ;
+    background-color: rgb(255, 255, 255,0.05);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
     
   }
   
-  .stuff h2 {
+  .mec .card h2 {
     text-align: center;
     font-weight: bolder;
-    font-size: 3.5rem;
+    font-size: 1.5rem;
   }
-  .stuff p {
+
+  .mec .card-title{
+      padding: 20px;
+  }
+  .mec .card p {
     line-height: 2rem;
     padding: 20px;
     font-size: 1.2rem;
     font-weight: bolder;
   }
+  .mec .card-title{
+    font-size: 40px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+
   .valign-wrapper {
     flex-wrap: wrap;
   }
@@ -42,6 +62,8 @@
   .mainn .row .col.l4{
       width:500px;
   }
+
+  
   @media only screen and (min-width: 1050px) {
     .mainn .row .col:first-child {
       margin-right: 20px;
@@ -51,20 +73,23 @@
     }
   }
   @media only screen and (max-width: 1050px) {
-    .stuff {
-      height: 320px;
+    .stuff .card{
+      height: 400px;
     }
-    .stuff h2 {
+    .stuff .card h2 {
       font-size: 2.7rem;
       line-height: 0.2rem;
       font-weight: bold;
       padding: 10px;
     }
-    .stuff p {
+    .stuff .card p {
       font-size: 0.9rem;
       line-height: 1.1rem;
       font-weight: bold;
       padding: 10px;
+    }
+    .mec .card:last-child{
+        margin-top: 20px;
     }
     .mainn .row .col {
       padding: 20px 10px;
