--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -7,10 +7,14 @@
   color:  #777777;
 }
 .backdrp{
-  background-image: url('../../assets/hero.gif');
+  background-image: url("../../assets/mec.jpeg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin-bottom: -0.36%;
+  height: 100vh;
+
+  /* filter: blur(2px); */
 }
 
 path.outlogo {
@@ -21,4 +25,15 @@ path.outlogo {
     50% { transform: rotate(45deg); }
     100% { transform: rotate(0deg); }
   }
+}
+
+
+.partial 
+{  
+  border-radius: 20px;
+  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px) ;
+  background-color: rgb(255, 255, 255,0.05);
+  border-radius: 20px;
+  min-height: 45vh;
 }
