--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,96 +1,8 @@
-.slider-container{
-    height : 800px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 100px;
-}
+/* 01579b */
 
-.slider{
-    width: 75%;
-    background: whitesmoke;
-    box-shadow:rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;;
+.indicator-item.active{
+    background-color: #01579b!important;; 
 }
-
-.slider .slides{
-    background: whitesmoke;
-}
-
-.slider-window-container{
-    margin: 0;
-}
-
-.slider-content-00{
-    height: 450px;
-    padding: 20px;
-    background: #02579B;
-    box-shadow:rgba(57, 72, 138, 0.404) 0px 7px 29px 0px;;
-    text-align: center;
-}
-
-.slider-content-00 h3{
-    color: rgb(255, 255, 255);
-    margin-top: 60px;
-    font-size: 35px;
-}
-
-
-.slider-content-01{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 30px;
-    width: 100%;
-}
-
-.slider .indicators .indicator-item.active{
-    background-color: #02579B;
-}
-.content-details{
-    transform:translate(0, -100px);
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    color: black;
-}
-#quote{
-    color: #022949;
-    font-size: 90px;
-    margin-top: 30px;
-}
-.testimonial-image{
-    background:url("https://toppng.com/uploads/preview/stock-person-png-stock-photo-man-11563049686zqeb9zmqjd.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 100%;
-    width: 200px;
-    height: 200px;
-    transform: translate(0,-100px);
-    /* margin-left: 55px; */
-    border: 10px solid #02579B;
-}
-
-.slider .indicators {
-    margin: 10px;
-}
-
-
-@media only screen and (max-width: 1200px) {
-    .slider{
-        width: 90%;
-    }
-    .slider-content-00 h3{
-        font-size: 20px;
-    }
-    #quote{
-        color: #022949;
-        font-size: 60px;
-        margin-top: 45px;
-    }
-    .testimonial-image{
-        width: 150px;
-        height: 150px;   
-    }
+.indicator-item{
+    background-color: #90a4ae!important;
 }
