--- a/src/css/aboutMEC.css
+++ b/src/css/aboutMEC.css
@@ -3,25 +3,19 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: fit-content;
+    background-position: center;
     padding: 30px;
     width: 100%;
     backdrop-filter: blur(2px);
   }
-  .mec .card{
-    padding: 200px;
-    height: 630px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin: auto;
+
+.stuff{
     /* background-color: white; */
     background-color: rgba(255, 255, 255, 0.48);
     color: rgb(29, 93, 182);
-    /* opacity: 0.8; */
+    min-height: 700px;
     border-radius: 20px;
     backdrop-filter: blur(100px);
-
-
     backdrop-filter: blur(100px);
     -webkit-backdrop-filter: blur(100px) ;
     background-color: rgb(255, 255, 255,0.05);
@@ -33,66 +27,40 @@
   .mec .card h2 {
     text-align: center;
     font-weight: bolder;
-    font-size: 1.5rem;
   }
 
-  .mec .card-title{
-      padding: 20px;
-  }
-  .mec .card p {
-    font-size: 1.2rem;
+  .card .card-content p {
     font-weight: bolder;
+    font-size: 2.4vh; 
   }
   .mec .card-title{
     font-size: 40px;
     font-weight: 500;
     text-align: center;
   }
-
+/* 
 
   .valign-wrapper {
     flex-wrap: wrap;
-  }
-  .mainn .row .col {
+  } */
+  /* .mainn .row .col {
     padding: 5px 10px;
-    width: 5px;
-  }
-  .mainn .row .col.l4{
-      width:500px;
-  }
-
-  
-  @media only screen and (min-width: 1050px) {
-    .mainn .row .col:first-child {
-      margin-right: 20px;
-    }
-    .mainn .row .col:last-child {
-      margin-left: 20px;
-    }
-  }
+  } */
   @media only screen and (max-width: 1050px) {
-    .stuff .card{
-      height: 400px;
-    }
+
     .stuff .card h2 {
       font-size: 2.7rem;
-      line-height: 0.2rem;
-      font-weight: bold;
-      padding: 10px;
     }
     .stuff .card p {
-      font-size: 0.9rem;
-      line-height: 1.1rem;
       font-weight: bold;
-      padding: 10px;
     }
     .mec .card:last-child{
         margin-top: 20px;
     }
-    .mainn .row .col {
-      padding: 20px 10px;
-    }
-    .mainn .row .col.s10{
-      width:450px;
   }
+
+  @media (max-width: 600px) {
+    .adj{
+      width: 100%;
+    }
   }
