--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -39,3 +39,8 @@ body{
     background-image: url("../../assets/parallax.jpg");
     background-attachment: fixed;
 } */
+
+.testcssforemptycommit{
+    height: 100px;
+    width: 100px;
+}
